--- a/css/courHTML.css
+++ b/css/courHTML.css
@@ -48,22 +48,50 @@ header #font i {
     color: white;
 }
 
+nav{
+
+}
+
 main {
     width: 70%;
     height: 100%;
     margin: 0 auto;
     margin-top: 20px;
+    margin-bottom: 20px;
     background-color: #E3E6EF;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+p {
+    font-size: large;
+}
+
+main div {
+    margin-bottom: 20px;
+}
+
 main div h1, main div h2{
     font-family: 'Audiowide-Regular';
     font-size: large;
 }
+pre {
+    background-color: #333;
+    border-radius: 10px;
+    border: solid 2px black;
+    padding: 10px;
+    color: white;
+    font-size: x-large;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
+code{
+    font-family: "Courier New", Courier, monospace;
+}
 footer {
     bottom: 0;
     background-color: #333;
