--- a/css/courHTML.css
+++ b/css/courHTML.css
@@ -14,6 +14,7 @@ body {
 }
 
 header {
+    margin-left: 20%;
     background-color: #5F11E8;
     color: black;
     padding: 20px;
@@ -48,14 +49,73 @@ header #font i {
     color: white;
 }
 
-nav{
+#menu{
+    background-color: #E3E6EF;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 20%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    border-right: solid 3px #5F11E8;
+}
 
+#menu h1 {
+    text-align: center;
+    margin-top: 40px;
+    font-family: 'Audiowide-Regular';
+}
+
+#menu #ul1 {
+    margin-left: 55px;
+    margin-top: 30px;
+}
+
+.ul2 {
+    max-height: 0;
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
+    overflow: hidden;
+    transition: max-height 0.3s ease-out;
+}
+.ul2.open {
+    max-height: 500px;
+}
+
+.ul2 li{
+    margin-top: 10px;
+}
+
+#menu a {
+    color: black;
+    text-decoration: none;
+    font-size: large;
+    padding-right: 10px;
+}
+
+#menu #ul1 > li{
+    border-top: solid 1px #5F11E8;
+    padding: 10px;
+}
+
+#menu #ul1 li button {
+    cursor: pointer;
+}
+
+.rotate-icon {
+    transition: transform 0.3s ease-out;
+}
+
+.rotate-icon.rotated {
+    transform: rotate(90deg);
 }
 
 main {
     width: 70%;
     height: 100%;
-    margin: 0 auto;
+    left: 25%;
+    margin-left: 25%;
     margin-top: 20px;
     margin-bottom: 20px;
     background-color: #E3E6EF;
@@ -64,8 +124,14 @@ main {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.highlight {
+    background-color: yellow; /* Couleur de surlignage */
+    font-size: x-large;
+}
+
 p {
     font-size: large;
+    text-align: justify;
 }
 
 main div {
@@ -75,6 +141,12 @@ main div {
 main div h1, main div h2{
     font-family: 'Audiowide-Regular';
     font-size: large;
+}
+main div h3{
+    font-family: 'Audiowide-Regular';
+    font-size: large;
+    text-decoration: underline;
+    text-align: center;
 }
 pre {
     background-color: #333;
@@ -96,7 +168,7 @@ footer {
     bottom: 0;
     background-color: #333;
     padding: 20px;
-    text-align: center;
+    text-align: right;
 
 }
 
