--- a/css/courHTML.css
+++ b/css/courHTML.css
@@ -138,7 +138,7 @@ main div {
     margin-bottom: 20px;
 }
 
-main div h1, main div h2{
+ main div h2{
     font-family: 'Audiowide-Regular';
     font-size: large;
 }
@@ -147,6 +147,10 @@ main div h3{
     font-size: large;
     text-decoration: underline;
     text-align: center;
+}
+main div h1{
+    font-size: x-large;
+    font-family: 'Audiowide-Regular';
 }
 pre {
     background-color: #333;
