--- a/css/courHTML.css
+++ b/css/courHTML.css
@@ -124,6 +124,15 @@ main {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+main {
+    animation: grow 1s;
+  }
+  
+  @keyframes grow {
+        0% { transform: scale(.2); }
+      100% { transform: scale(1); }
+  }
+
 .highlight {
     background-color: yellow; /* Couleur de surlignage */
     font-size: x-large;
@@ -134,11 +143,18 @@ p {
     text-align: justify;
 }
 
-main div {
+main div, main div div {
     margin-bottom: 20px;
 }
-
- main div h2{
+#base p a {
+    color: #5F11E8;
+}
+#base p a:hover {
+    color: black;
+    font-size: x-large;
+    transition-duration: 1s;
+}
+ main>div>h2{
     font-family: 'Audiowide-Regular';
     font-size: large;
 }
@@ -147,6 +163,7 @@ main div h3{
     font-size: large;
     text-decoration: underline;
     text-align: center;
+    margin-top: 20px;
 }
 main div h1{
     font-size: x-large;
